@@ -36,10 +36,8 @@ public class QuizSelectionController implements Initializable, Controller {
 
 
     public void beginQuiz() throws Exception{
-        if(amount == 0){
-//            System.out.println("no valid input (begin)");
-            errorLabel.setText("Must enter valid input (1-" + SqlCaller.getDBSize() + ") and click verify input");
-        } else {
+        verifyInput();
+        if(amount > 0){
             populateQuizQuestions(amount);
             sb.setNewSceneWithParameters((Stage) beginQuizButton.getScene().getWindow(), "quiz", quizQuestions);
         }
@@ -56,10 +54,7 @@ public class QuizSelectionController implements Initializable, Controller {
     public void verifyInput(){
         if(InputHandler.verifyNumberOfQs(numberOfQuestions.getText())){
             amount = receiveInput();
-            errorLabel.setText(amount + " is valid input");
-            errorLabel.setTextFill(Color.GREEN);
         } else {
-//            System.out.println("no valid input (verifyInput)");
             errorLabel.setText("Must enter valid input (1-" + SqlCaller.getDBSize() + ") and click verify input");
             amount = 0;
             errorLabel.setTextFill(Color.RED);
