@@ -11,17 +11,17 @@
 - Add Question Page
     - clear fields when submitted  ------
     - confirmation message  ------
-    - space between radio button and text field
+    - space between radio button and text field  --------
     - improve styling
 - Quiz Selection Page
-    - remove java label
-    - space between begin quiz and all questions buttons
-    - remove Verify button and have begin quiz button handle verification process
+    - remove java label  ------------
+    - space between begin quiz and all questions buttons  ----------
+    - remove Verify button and have begin quiz button handle verification process  ------
     - improve styling
 - Quiz Page
-    - remove unnecessary info from left panel
-    - space between test and home buttons
-    - make radio buttons smaller
+    - remove unnecessary info from left panel  ---------
+    - space between test and home buttons  ---------
+    - make radio buttons smaller  -------
     - about that styling...
 - General
     - turn it into a software dev study guide quiz
@@ -39,6 +39,15 @@
 7/16/22
     - Add Question
         - bugs when adding fields with apostrophes. check for other unique characters (slash, quote, etc.)
+
+7/17/22
+    - Minor stuffs out of the way, time to do some real coding
+    - Implement tag/category to a question
+    - Goal is for the Quiz Selection page to display all available categories for user to pick from
+        - can pick multiple
+        - amount of Q's in category displayed
+        - can then select All questions or a # in the range of all clicked categories sum of questions
+            - if a # in range is chosen, a random amount of Q's from each category should be given
 
 
 
