@@ -9,19 +9,19 @@
 
 7/15/22
 - Add Question Page
-    - clear fields when submitted
-    - confirmation message
-    - space between radio button and text field
+    - clear fields when submitted  ------
+    - confirmation message  ------
+    - space between radio button and text field  --------
     - improve styling
 - Quiz Selection Page
-    - remove java label
-    - space between begin quiz and all questions buttons
+    - remove java label  ------------
+    - space between begin quiz and all questions buttons  ----------
     - remove Verify button and have begin quiz button handle verification process
     - improve styling
 - Quiz Page
-    - remove unnecessary info from left panel
-    - space between test and home buttons
-    - make radio buttons smaller
+    - remove unnecessary info from left panel  ---------
+    - space between test and home buttons  ---------
+    - make radio buttons smaller  -------
     - about that styling...
 - General
     - turn it into a software dev study guide quiz
